# TrueNorth-Eval

./: .gitignore  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.demo.yml  docker-compose.yml  env.example  pyproject.toml
anthropic-claude-evaluation/: agentic_evaluation_results.csv  agentic_summary_by_dp.csv  notes.txt
src/: AnswerGenerator.py  Knowledge.py  ModelUsage.py  RequestsHandler.py  TextCleaner.py  answers_generated.json  bot.py  design_evaluator.py  similarity_evaluator.py  streamlit_ui.py  test_cases.json  test_examples.sh  test_server.sh  theme_counter.py  theme_distribution.csv  verify_metadata.py
src/books_pdf/: references.bib
src/pages/: Home.py
src/truenorth/: app.py  graph.py  main.py
src/truenorth/agent/: answer_generator.py  chitter_chatter.py  document_relevence_checker.py  document_retriever.py  evaluation_agents.py  evaluator.py  generator.py  hallucination_checker.py  query_rewriter.py  reference_table.py  route_question.py  state.py  web_searcher.py
src/truenorth/api/: pdf_viewer.py
src/truenorth/api/routes/: pdf.py
src/truenorth/llm/: models.py
src/truenorth/utils/: citation_manager.py  cleaner.py  database.py  llm.py  logging.py  metaprompt.py  ollama.py
tests/: test_citation_robustness.py
